--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -2,21 +2,31 @@
 
 {% block body %}
 {{ error }}
-   <form method="POST" action="{{ url_for('auth_login')}}" style="width: 100%">
-       <table>
-           <tr class="form-group">
-               <td>{{ form.username.label(class_="form-control") }}</td>
-               <td>{{ form.username(class_="form-control") }}</td>
-           </tr>
-           <tr class="form-group">
-               <td>{{ form.password.label(class_="form-control") }}</td>
-               <td>{{ form.password(class_="form-control") }}</td>
-           </tr>
-           <tr class="form-group">
-               <td colspan="">
-                   <input class="form-control" type="submit" value="Log in" />
-               </td>
-           </tr>
-       </table>
-   </form>
+<div class="row justify-content-center" style="margin-top: 20px">
+    <div class="col-sm-4">
+        <h1 class="">Log in</h1>
+    </div>
+</div>
+<div class="row justify-content-center" style="margin-top: 20px">
+    
+    <div class="col-sm-4">
+        <form method="POST" action="{{ url_for('auth_login')}}" class="">
+             <div class="form-group row">
+                 {{ form.username.label(class_="col-sm-3 col-form-label") }}
+                 <div class="col-sm-9">
+                    {{ form.username(class_="form-control") }}
+                </div>
+             </div>
+             <div class="form-group row">
+                 {{ form.password.label(class_="col-sm-3 col-form-label") }}
+                 <div class="col-sm-9">
+                    {{ form.password(class_="form-control") }}
+                </div>
+             </div>
+             <div class="form-group">
+                 <input class="btn" type="submit" value="Log in" />
+             </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
