--- a/application/templates/bankaccounts/accountsummary.html
+++ b/application/templates/bankaccounts/accountsummary.html
@@ -3,83 +3,80 @@
 {% block body %}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
-
-    <h1>{{ account.name }}</h1>
-    <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">Back to account</a>
-    <ul class="nav nav-tabs">
-        <li class="nav-item"><a {% if active == "ytd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['ytd']) }}">Year to date</a></li>
-        <li class="nav-item"><a {% if active == "mtd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['mtd']) }}">Month to date</a></li>
-        <li class="nav-item"><a {% if active == "all" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['all']) }}">All time</a></li>
-    </ul>
-
-<h3>Summary of debit transactions</h3>
-{% if debitSummary|length > 0 %}
-<table class="table">
-    <thead class="thead-light">
-        <tr>
-            <th>Category name</td>
-            <th>Sum of transactions in category</td>
-        </tr>
-    </thead>
-    <tbody>
-        {% for category in debitSummary %}
-        <tr>
-            <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
-            <td>{{ category.amount }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<canvas id="debitchart" width="600" height="400"></canvas>
-<script type="text/javascript">
-    let debitset = '{{ debitset|tojson }}'
-    //var pieData = [{ label: "MÖS", value: 23 , color: "#F7464A"},{ label:"moes", value: 10, color: "#46BFBD"}];
-    // get bar chart canvas
-    var mychart = document.getElementById("debitchart").getContext("2d");
-    steps = 10
-    max = 10
-    // draw pie chart
-    new Chart(document.getElementById("debitchart").getContext("2d")).Pie(JSON.parse(debitset));
- </script>
-{% else %}
-    <p>No transactions to display</p>
-
-{% endif %}
-
-
-    <h3>Summary of credit transactions</h3>
-    {% if creditSummary|length > 0%}
-    <table class="table">
-        <thead class="thead-light">
+<div class="row justify-content-center" style="margin-top: 20px">
+    <div class="col-sm-10">
+        <h1>{{ account.name }}</h1>
+        <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">Back to account</a>
+        <ul class="nav nav-tabs">
+            <li class="nav-item"><a {% if active == "ytd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['ytd']) }}">Year to date</a></li>
+            <li class="nav-item"><a {% if active == "mtd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['mtd']) }}">Month to date</a></li>
+            <li class="nav-item"><a {% if active == "all" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['all']) }}">All time</a></li>
+        </ul>
+        
+        <h3>Summary of debit transactions</h3>
+        {% if debitSummary|length > 0 %}
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                    <th>Category name</td>
+                    <th>Sum of transactions in category</td>
+                </tr>
+            </thead>
+            <tbody>
+                {% for category in debitSummary %}
+                <tr>
+                    <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
+                    <td>{{ category.amount }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <canvas id="debitchart" width="600" height="400"></canvas>
+        <script type="text/javascript">
+            let debitset = '{{ debitset|tojson }}'
+            var mychart = document.getElementById("debitchart").getContext("2d");
+            steps = 10
+            max = 10
+            new Chart(document.getElementById("debitchart").getContext("2d")).Pie(JSON.parse(debitset));
+         </script>
+        {% else %}
+            <p>No transactions to display</p>
+        {% endif %}
+     
+            <h3>Summary of credit transactions</h3>
+            {% if creditSummary|length > 0%}
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Category name</td>
+                        <th>Sum of transactions in category</td>
+                    </tr>
+                </thead>
+            
+            {% for category in creditSummary %}
             <tr>
-                <th>Category name</td>
-                <th>Sum of transactions in category</td>
+                <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
+                <td>{{ category.amount }}</td>
             </tr>
-        </thead>
-
-    {% for category in creditSummary %}
-    <tr>
-        <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
-        <td>{{ category.amount }}</td>
-    </tr>
-    {% else %}
-
-    <tr><td>No transactions to display</td></tr>    
-
-    {% endfor %}
-</table>
-<canvas id="creditchart" width="600" height="400"></canvas>
-<script type="text/javascript">
-    let creditset = '{{ creditset|tojson }}'
-    // get bar chart canvas
-    var mychart = document.getElementById("creditchart").getContext("2d");
-    steps = 10
-    max = 10
-    // draw pie chart
-    new Chart(document.getElementById("creditchart").getContext("2d")).Pie(JSON.parse(creditset));
- </script>
-{% else %}
-    <p>No transactions to display</p>
-
-{% endif %}
-{% endblock %}
+            {% else %}
+        
+            <tr><td>No transactions to display</td></tr>    
+        
+            {% endfor %}
+        </table>
+        <canvas id="creditchart" width="600" height="400"></canvas>
+        <script type="text/javascript">
+            let creditset = '{{ creditset|tojson }}'
+            // get bar chart canvas
+            var mychart = document.getElementById("creditchart").getContext("2d");
+            steps = 10
+            max = 10
+            // draw pie chart
+            new Chart(document.getElementById("creditchart").getContext("2d")).Pie(JSON.parse(creditset));
+         </script>
+        {% else %}
+            <p>No transactions to display</p>
+        {% endif %}
+        {% endblock %}
+    </div>
+</div>
