--- a/application/templates/bankaccounts/bankaccounts.html
+++ b/application/templates/bankaccounts/bankaccounts.html
@@ -2,57 +2,60 @@
 
 {% block body %}
 
-<h1>Accounts</h1>
-<table class="table">
-    <thead class="thead-light">
-    <tr>
-        <th>Name</th>
-        <th>Bank</th>
-        <th>Initial Balance</th>
-        <th>Current Balance</th>
-        <th>Action</th>
-    </tr>
-</thead>
-    {% for account in accounts %}
-    <tbody>
-    <tr>
-        <td>
-            <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">
-                {{ account.name }}
-            </a>
-        </td>
-        <td>{{ account.bank }}</td>
-        <td>{{ account.initial_balance }}</td>
-        <td>{{ account.current_balance }}</td>
-        <td>
-            <form method="POST" action="{{ url_for('delete_bankaccount', bankaccount_id=account.id) }}">
-            <button type="submit">Delete this account</button>
-            </form>
-        </td>
-    </tr>
+<div class="row justify-content-center" style="margin-top: 20px">
+    <div class="col-sm-10">
+        <h1>Accounts</h1>
+        <table class="table">
+            <thead class="thead-light">
+            <tr>
+                <th>Name</th>
+                <th>Bank</th>
+                <th>Initial Balance</th>
+                <th>Current Balance</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+            {% for account in accounts %}
+            <tbody>
+            <tr>
+                <td>
+                    <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">
+                        {{ account.name }}
+                    </a>
+                </td>
+                <td>{{ account.bank }}</td>
+                <td>{{ account.initial_balance }}</td>
+                <td>{{ account.current_balance }}</td>
+                <td>
+                    <form method="POST" action="{{ url_for('delete_bankaccount', bankaccount_id=account.id) }}">
+                    <button type="submit">Delete this account</button>
+                    </form>
+                </td>
+            </tr>
+        
+            {% endfor %}
+        </tbody>
+        </table>
 
-    {% endfor %}
-</tbody>
-</table>
-
-<h2>Create new Bank account</h2>
-{{ error }}
-<form method="POST" action="{{ url_for('bankaccounts') }}">
-    <div class="form-group row">
-        <span class="col-sm-3 col-form-label">{{ form.name.label }}</span>
-        <span>{{ form.name(class_="form-control") }}</span>
-    </div>
-    <div class="form-group row">
-        <span class="col-sm-3 col-form-label">{{ form.bank.label }}</span>
-        <span>{{ form.bank(class_="form-control") }}</span>
-    </div>
-    <div class="form-group row">
-        <span class="col-sm-3 col-form-label">{{ form.balance.label }}</span>
-        <span>{{ form.balance(class_="form-control") }}</span>
-    </div>
-    <div class="form-group row">
-        <input class="col-sm-3 col-form-label" class="form-control" type="submit" value="Create bank account" />
-    </div>
-</form>
-
-{% endblock %}
+        <h2>Create new Bank account</h2>
+        {{ error }}
+        <form method="POST" action="{{ url_for('bankaccounts') }}">
+            <div class="form-group row">
+                <span class="col-sm-3 col-form-label">{{ form.name.label }}</span>
+                <span>{{ form.name(class_="form-control") }}</span>
+            </div>
+            <div class="form-group row">
+                <span class="col-sm-3 col-form-label">{{ form.bank.label }}</span>
+                <span>{{ form.bank(class_="form-control") }}</span>
+            </div>
+            <div class="form-group row">
+                <span class="col-sm-3 col-form-label">{{ form.balance.label }}</span>
+                <span>{{ form.balance(class_="form-control") }}</span>
+            </div>
+            <div class="form-group row">
+                <input class="col-sm-3 col-form-label" class="form-control" type="submit" value="Create bank account" />
+            </div>
+        </form>
+        {% endblock %}
+    </div>    
+</div>
