--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,17 +1,21 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<p>
-MÖS MAAILMA
-</p>
+<div class="row justify-content-center" style="margin-top: 20px">
+    <div class="col-sm-10">
+        <p>
+        MÖS MAAILMA
+        </p>
 
-<p>Pivo Slayer currently has the following features:</p>
-<ul>
-    <li>Create a user name</li>
-    <li>Create bank accounts for the user</li>
-    <li>Create transactions and attach them to the account (Account balance will update as you add transactions!)</li>
-    <li>Browse your accounts and see your transactions on each account</li>
-    <li>Create categories for transactions - cannot yet attach transactions to categories, sadly.</li>
-</ul>
+        <p>Pivo Slayer currently has the following features:</p>
+        <ul>
+            <li>Create a user name</li>
+            <li>Create bank accounts for the user</li>
+            <li>Create transactions and attach them to the account (Account balance will update as you add transactions!)</li>
+            <li>Browse your accounts and see your transactions on each account</li>
+            <li>Create categories for transactions - cannot yet attach transactions to categories, sadly.</li>
+        </ul>
+    </div>
+</div>
 
 {% endblock %}
