--- a/application/templates/newtransaction.html
+++ b/application/templates/newtransaction.html
@@ -1,100 +1,102 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
-<h1>New transaction</h1>
-
-<form method="POST" action="{{url_for('create_transaction')}}">
-    <table>
-        <tr class="form-group">
-            <td>
-                {{ form.amount.label(class_="col-form-label") }}
-            </td>
-            <td>
-                {{ form.amount(class_="form-control") }}
-            </td>
-            <td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.bookingdate.label(class_="col-form-label") }}</td>
-            <td>{{ form.bookingdate(class_="form-control") }}</td>
-            <td>
-                <ul>
-                    {% for error in form.bookingdate.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.counterparty.label(class_="col-form-label") }}</td>
-            <td>{{ form.counterparty(class_="form-control") }}</td>
-            <td>
-                <ul>
-                    {% for error in form.counterparty.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.iban.label(class_="col-form-label") }}</td>
-            <td>{{ form.iban(class_="form-control") }}</td>
-            <td>
-                <ul>
-                    {% for error in form.iban.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.message.label(class_="col-form-label") }}</td>
-            <td>{{ form.message(class_="form-control") }}</td>
-            <td>
-                <ul>
-                    {% for error in form.message.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.creditordebit.label(class_="col-form-label") }}</td>
-            <td>{{ form.creditordebit(class_="form-control") }}</td>
-            <td>
-                <ul>    
-                {% for error in form.creditordebit.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td>{{ form.account.label(class_="col-form-label") }}</td>
-            <td>{{ form.account(class_="form-control") }}</td>
-            <td>
-                <ul>    
-                {% for error in form.account.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr class="form-group">
-            <td >{{ form.category.label(class_="col-form-label") }}</td>
-            <td>{{ form.category(class_="form-control") }}</td>
-            <td>
-                <ul>    
-                {% for error in form.category.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <div><input type="submit" class="btn btn-primary" value="Submit transaction" /></div>
-
-</form>
-
+<div class="row justify-content-center" style="margin-top: 20px">
+        <div class="col-sm-10">
+            
+        <h1>New transaction</h1>
+            
+        <form method="POST" action="{{url_for('create_transaction')}}">
+            <table>
+                <tr class="form-group">
+                    <td>
+                        {{ form.amount.label(class_="col-form-label") }}
+                    </td>
+                    <td>
+                        {{ form.amount(class_="form-control") }}
+                    </td>
+                    <td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.bookingdate.label(class_="col-form-label") }}</td>
+                    <td>{{ form.bookingdate(class_="form-control") }}</td>
+                    <td>
+                        <ul>
+                            {% for error in form.bookingdate.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.counterparty.label(class_="col-form-label") }}</td>
+                    <td>{{ form.counterparty(class_="form-control") }}</td>
+                    <td>
+                        <ul>
+                            {% for error in form.counterparty.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.iban.label(class_="col-form-label") }}</td>
+                    <td>{{ form.iban(class_="form-control") }}</td>
+                    <td>
+                        <ul>
+                            {% for error in form.iban.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.message.label(class_="col-form-label") }}</td>
+                    <td>{{ form.message(class_="form-control") }}</td>
+                    <td>
+                        <ul>
+                            {% for error in form.message.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.creditordebit.label(class_="col-form-label") }}</td>
+                    <td>{{ form.creditordebit(class_="form-control") }}</td>
+                    <td>
+                        <ul>    
+                        {% for error in form.creditordebit.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td>{{ form.account.label(class_="col-form-label") }}</td>
+                    <td>{{ form.account(class_="form-control") }}</td>
+                    <td>
+                        <ul>    
+                        {% for error in form.account.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+                <tr class="form-group">
+                    <td >{{ form.category.label(class_="col-form-label") }}</td>
+                    <td>{{ form.category(class_="form-control") }}</td>
+                    <td>
+                        <ul>    
+                        {% for error in form.category.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+            <div><input type="submit" class="btn btn-primary" value="Submit transaction" /></div>
+        </form>
+    </div>
+</div>
 {% endblock %}
