--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -1,44 +1,46 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<div class="row">
+    <div class="col-md-12">
+        <h1>Transaction {{transaction.id}}</h1>
 
-<h1>Transaction {{transaction.id}}</h1>
-
-<table class="table">
-    <tr>
-      <td>Booking Date (EUR)</td>
-      <td>{{transaction.booking_date}}</td>    
-    </tr>
-  <tr>
-    <td>Amount (EUR)</td>
-    <td>{{transaction.amount}}</td>    
-  </tr>
-  <tr>
-    <td>Credit or debit</td>
-    <td>{{transaction.credit_or_debit}}</td>    
-  </tr>
-  <tr>
-      <td>Counterparty</td>
-      <td>{{transaction.counterparty_name}}</td>
-  </tr>
-  <tr>
-      <td>Message</td>
-      <td>{{transaction.message}}</td>
-  </tr>
-  <tr>
-      <td>Bank account ID</td>
-      <td>{{transaction.bankaccount_id}}</td>
-  </tr>
-  <tr>
-      <td>Category</td>
-      <td>{{transaction.category_name}}</td>
-  </tr>
-</table>
-
-<h6>Change the message</h6>
-<form method="POST" action="{{url_for('modify_transaction', transaction_id=transaction.id)}}" >
-    <input name="message" type="text" placeholder="Transaction message"/>
-    <input type="submit" value="Submit"/>
-</form>
+        <table class="table">
+            <tr>
+              <td>Booking Date (EUR)</td>
+              <td>{{transaction.booking_date}}</td>    
+            </tr>
+          <tr>
+            <td>Amount (EUR)</td>
+            <td>{{transaction.amount}}</td>    
+          </tr>
+          <tr>
+            <td>Credit or debit</td>
+            <td>{{transaction.credit_or_debit}}</td>    
+          </tr>
+          <tr>
+              <td>Counterparty</td>
+              <td>{{transaction.counterparty_name}}</td>
+          </tr>
+          <tr>
+              <td>Message</td>
+              <td>{{transaction.message}}</td>
+          </tr>
+          <tr>
+              <td>Bank account ID</td>
+              <td>{{transaction.bankaccount_id}}</td>
+          </tr>
+          <tr>
+              <td>Category</td>
+              <td>{{transaction.category_name}}</td>
+          </tr>
+        </table>
+        <h6>Change the message</h6>
+        <form method="POST" action="{{url_for('modify_transaction', transaction_id=transaction.id)}}" >
+            <input name="message" type="text" placeholder="Transaction message"/>
+            <input type="submit" value="Submit"/>
+        </form>
+    </div>      
+</div>
 
 {% endblock %}
