--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,17 +3,17 @@
 {% block body %}
 <div class="row justify-content-center" style="margin-top: 20px">
     <div class="col-sm-10">
-        <p>
-        MÖS MAAILMA
-        </p>
+        <h1 style="margin-top: 30px">Welcome to Pivo Slayer</h1>
 
-        <p>Pivo Slayer currently has the following features:</p>
+        <p>It's the future of programming assignments! Pivo Slayer has the following features:</p>
         <ul>
-            <li>Create a user name</li>
-            <li>Create bank accounts for the user</li>
+            <li>Create a user account</li>
+            <li>Create, modify and delete bank accounts</li>
             <li>Create transactions and attach them to the account (Account balance will update as you add transactions!)</li>
             <li>Browse your accounts and see your transactions on each account</li>
-            <li>Create categories for transactions - cannot yet attach transactions to categories, sadly.</li>
+            <li>Create categories for transactions</li>
+            <li>See a summary of your categories for each account!</li>
+            <li>See transactions per each category.</li>
         </ul>
     </div>
 </div>
